Aggiorna progetto pronto per deploy su Vercel

--- a/package.json
+++ b/package.json
@@ -5,26 +5,22 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
-    "@mui/icons-material": "^7.2.0",
-    "@mui/material": "^7.2.0",
+    "@mui/icons-material": "^5.18.0",
+    "@mui/material": "^5.18.0",
+    "@mui/system": "^5.18.0",
     "@mui/x-date-pickers": "^8.9.0",
     "@mui/x-date-pickers-pro": "^8.9.0",
-    "@types/multer": "^2.0.0",
-    "@types/react-router-dom": "^5.3.3",
-    "appwrite": "^18.1.1",
     "date-fns": "^4.1.0",
-    "multer": "^2.0.2",
-    "pdf-parse": "^1.1.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.6.3",
+    "react-router-dom": "^6.23.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
