--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "preview": "vite preview"
   },
   "engines": {
-    "node": "20"
+    "node": "20",
+    "npm": "9"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
