💾 BACKUP: Progetto funzionante senza Cursor - pre-pulizia file obsoleti

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,32 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# File obsoleti che si rigenerano automaticamente - IGNORALI
+src/components/ListaClienti.tsx
+src/components/GestioneFornitori.tsx
+src/components/GestioneAcquisti.tsx
+src/components/GestioneFattureVendita.tsx
+src/components/GestioneProdotti.tsx
+src/components/GestioneVarieta.tsx
+src/components/InserimentoFattura.tsx
+src/components/MovimentiMagazzino.tsx
+src/components/PDFParsingInterattivo.tsx
+src/components/Statistiche.tsx
+src/components/StatisticheFattureAcquisto.tsx
+src/components/StatisticheVendite.tsx
+
+# File di migrazione temporanei
+ANALISI_*.md
+MIGRAZIONE_*.md
+PROGRESS_*.md
+MODERN_*.md
+TEST_*.md
+migrate_*.js
+migrate_*.ps1
+migrate_*.sh
+create_*.js
+setup_*.js
+test_*.sql
+test_*.js
+test_*.cjs
